--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+build/
+examples/demo/data
+coverage.out
+release.tar.gz
+.env
+.idea/
+.csv
+test/setup/valkeys/*.json
+test/keys/
+_test/setup/valkeys/*.json
+_test/keys/
+.DS_Store
+.vscode/
+dist/
+.release-env
 
-# Test binary, built with `go test -c`
-*.test
+# Don't commit the vendor directory if anyone runs 'go mod vendor'.
+/vendor
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
+go_build_sl_exporter
