--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,31 @@
-build/
-examples/demo/data
-coverage.out
-release.tar.gz
-.env
-.idea/
-.csv
-test/setup/valkeys/*.json
-test/keys/
-_test/setup/valkeys/*.json
-_test/keys/
-.DS_Store
-.vscode/
-dist/
-.release-env
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+bin
+testbin/*
+*.pprof
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Kubernetes Generated files - skip generated files, except for vendored files
+
+!vendor/**/zz_generated.*
+
+# editor and IDE paraphernalia
+.idea
+*.swp
+*.swo
+*~
 
 # Don't commit the vendor directory if anyone runs 'go mod vendor'.
 /vendor
 
-go_build_sl_exporter
+# Binary
+exporter
