--- a/.air.toml
+++ b/.air.toml
@@ -2,27 +2,28 @@ root = "."
 testdata_dir = "testdata"
 tmp_dir = "tmp"
 
+# These values were tuned on a Mac M2.
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main ."
-  delay = 0
+  cmd = "go build -race -o ./tmp/main ."
+  delay = 500
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
-  exclude_file = []
+  exclude_file = [".golangci.yaml", "config.example.yaml"]
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
-  include_file = []
+  include_ext = ["go", "tpl", "tmpl", "html", "yaml"]
+  include_file = ["config.yaml"]
   kill_delay = "0s"
   log = "build-errors.log"
-  poll = false
-  poll_interval = 0
+  poll = true # Polling works better than file system notifications (which often missed file change events)
+  poll_interval = 500
   rerun = false
   rerun_delay = 500
-  send_interrupt = false
+  send_interrupt = true
   stop_on_error = false
 
 [color]
