--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -14,10 +14,21 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '>=1.20.2'
+          go-version: '>=1.20.4'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           only-new-issues: false
           args: --timeout=5m
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '>=1.20.4'
+      - name: unit tests
+        run: make test
+
