--- a/config.example.yaml
+++ b/config.example.yaml
@@ -17,15 +17,15 @@ static:
         - { labels: [ "sommelier-3", "usomm" ], value: 6 }
         - { labels: [ "theta-testnet-001", "uatom" ], value: 6 }
 
-# Cosmos metrics gather and export metrics for Cosmos chains.
+# Gather and export metrics for Cosmos chains.
 cosmos:
   # Required. Recommended value is the canonical chain id, but can be any arbitrary string to identify the cosmos chain.
-  - chain: axelar-dojo-1
-    # RPCs, if present, periodically polls for CometBFT RPC data such as block height. Currently, polls every 5s.
-    rpcs:
-      - url: https://axelar-rpc.quantnode.tech
-        interval: 10s # Optional. Defaults to 5s.
-      - url: https://rpc.axelar.bh.rocks
+  - chain: cosmoshub-4
+    # If present, periodically polls for CometBFT (formerly Tendermint) data such as block height.
+    rpc:
+      - url: https://cosmos-rpc.polkachu.com
+        interval: 5s # Optional. Polling interval. Defaults to 5s.
+      - url: https://rpc.cosmoshub.strange.love
         # Not supported yet, but data structure allows extensions to support authenticating with RPC providers.
         # headers:
         #  X-API-KEY: my-api-key
