Add validator config to example

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -26,3 +26,6 @@ cosmos:
       - url: https://api.cosmoshub.strange.love
         interval: 5s # Optional. Defaults to 5s.
       - url: https://api-cosmoshub-ia.cosmosia.notional.ventures
+    validators:
+      # The consensus address of a validator.
+      - consaddress: cosmosvalcons164q2kq3q3psj436t9p7swmdlh39rw73wpy6qx6
