--- a/config.example.yaml
+++ b/config.example.yaml
@@ -21,8 +21,9 @@ static:
 cosmos:
   # The canonical chain id.
   - chainID: cosmoshub-4
-    # Periodically polls REST API (aka LCD) for data such as block height. At least one REST url is required.
     interval: 15s # Optional. How often to poll the REST API. Default is 15s.
+    # Periodically polls REST API (aka LCD) for data such as block height. At least one REST url is required.
+    # Order matters. The first url is used. If it fails, the next url is tried.
     rest:
       - url: https://api.cosmoshub.strange.love
       - url: https://api-cosmoshub-ia.cosmosia.notional.ventures
